--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "is-empty": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
