--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "create": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://realtimeproductivity.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
